testsuite/tests/patsyn/should_fail/T9705-1.hs
{-# LANGUAGE PatternSynonyms #-}
class C a where
    pattern P = ()
