testsuite/tests/patsyn/should_fail/T9705-1.stderr

T9705-1.hs:3:5: error:
    Pattern synonyms not allowed in class declaration:
      pattern P = ()
